--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<style type="text/css">
-		*{padding: 0px; margin:0px;}
+		*{padding: 0px; margin:0px;-webkit-user-select:none; -moz-user-select:none; -ms-user-select:none; user-select:none;}
+		body{ font-size: 16px; }
 		canvas{
 			background: url(./images/bkg.png);
 		}
@@ -12,6 +13,7 @@
 			position: relative;
 		}
 		#editpanel{
+			
 			position: absolute;
 			width: 100%;
 			height: 100%;
@@ -19,6 +21,59 @@
 			left:0px;
 			background: rgba(255,255,255,0.4);
 		}
+		#editpanel span{
+			cursor: pointer;
+			position: absolute;
+			top:0px;
+			left:0px;
+			line-height: 1;
+		}
+		#editpanel.crosshair{
+			cursor: crosshair;
+		}
+		#editpanel.pointer{
+			cursor: pointer;
+		}
+		#editpanel.move{
+			cursor: move;
+		}
+		#editpanel.e-resize{
+			cursor: e-resize;
+		}
+		#editpanel.ne-resize{
+			cursor: ne-resize;
+		}
+		#editpanel.nw-resize{
+			cursor: nw-resize;
+		}
+		#editpanel.n-resize{
+			cursor: n-resize;
+		}
+		#editpanel.se-resize{
+			cursor: se-resize;
+		}
+		#editpanel.sw-resize{
+			cursor: sw-resize;
+		}
+		#editpanel.s-resize{
+			cursor: s-resize;
+		}
+		#editpanel.w-resize{
+			cursor: w-resize;
+		}
+		#editpanel.n-resize{
+			cursor: n-resize;
+		}
+		#editpanel.text{
+			cursor: text;
+		}
+		#editpanel.wait{
+			cursor: wait;
+		}
+		#editpanel.help{
+			cursor: help;
+		}
+		
 	</style>
 </head>
 <body>
@@ -34,21 +89,29 @@
 		<canvas id="canvas"></canvas>
 		<div id="editpanel"></div>
 	</div>
-	
 	<canvas id="saveImage"></canvas>
 	<button id="download">download</button>
 	<div class="controlpanel">
 		<p>workplace size:</p>
 		<p>height:<input type="text" name="height"></p>
 		<p>width:<input type="text" name="width"></p>
+		<div>
+			<p>text：<input type="text" name="text"></p>
+			<p>text size:<input type="text" name="fontSize"></p>
+			<p>text color:<input type="color" name="fontColor"></p>
+			<div class="addText">add</div>
+		</div>
 	</div>
 	<script type="text/javascript" src="./scripts/init.js"></script>
 	<script type="text/javascript" src="./scripts/workplaceSize.js"></script>
+	<script type="text/javascript" src="./scripts/chooseImage.js"></script>
+	<script type="text/javascript" src="./scripts/addText.js"></script>
+	<script type="text/javascript" src="./scripts/saveImage.js"></script>
 	<script type="text/javascript" src="./scripts/event.js"></script>
-	<!-- <script type="text/javascript" src="./scripts/chooseImage.js"></script>
+	<!-- 
 	<script type="text/javascript" src="./scripts/moveImage.js"></script>
 	<script type="text/javascript" src="./scripts/scaleImage.js"></script>
 	<script type="text/javascript" src="./scripts/cropImage.js"></script>
-	<script type="text/javascript" src="./scripts/saveImage.js"></script> -->
+	 -->
 </body>
 </html>
