--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
 	</div>
 	<div class="workplace">
 		<canvas id="canvas"></canvas>
-		<div id="editpanel"></div>
+		<!-- <div id="editpanel"></div> -->
 	</div>
 	<canvas id="saveImage"></canvas>
 	<button id="download">download</button>
