--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,6 @@
 		<canvas id="canvas"></canvas>
 		<!-- <div id="editpanel"></div> -->
 	</div>
-	<canvas id="saveImage"></canvas>
 	<button id="download">download</button>
 	<div class="controlpanel">
 		<p>workplace size:</p>
@@ -103,6 +102,7 @@
 		</div>
 	</div>
 	<script type="text/javascript" src="./scripts/init.js"></script>
+	<script type="text/javascript" src="./scripts/updateCanvas.js"></script>
 	<script type="text/javascript" src="./scripts/workplaceSize.js"></script>
 	<script type="text/javascript" src="./scripts/chooseImage.js"></script>
 	<script type="text/javascript" src="./scripts/addText.js"></script>
