--- a/src/index.html
+++ b/src/index.html
@@ -101,6 +101,9 @@
 			<div class="addText">add</div>
 		</div>
 	</div>
+	<div class="">
+		<ul id="managerElements"></ul>
+	</div>
 	<script type="text/javascript" src="./scripts/init.js"></script>
 	<script type="text/javascript" src="./scripts/updateCanvas.js"></script>
 	<script type="text/javascript" src="./scripts/workplaceSize.js"></script>
@@ -108,6 +111,7 @@
 	<script type="text/javascript" src="./scripts/addText.js"></script>
 	<script type="text/javascript" src="./scripts/saveImage.js"></script>
 	<script type="text/javascript" src="./scripts/event.js"></script>
+	<script type="text/javascript" src="./scripts/elementsManager.js"></script>
 	<!-- 
 	<script type="text/javascript" src="./scripts/moveImage.js"></script>
 	<script type="text/javascript" src="./scripts/scaleImage.js"></script>
